# asset_canister_factory

./: .gitignore  Cargo.toml  README.md  candid.did  dfx.json
src/: lib.rs  management.rs
