[package]
name = "certified_asset_factory"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-kit = { git = "https://github.com/psychedelic/ic-kit", branch="feat/ic-kit-http" }
candid = "0.8.3"
serde = "1.0.147"
serde_bytes = "0.11.7"
async-trait = "0.1.58"
